# you-talk-too-much-app

./: .copier-answers.yml  .editorconfig  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  app.py  app_test.py  app_whisper.py  audio_capturer.py  conversation.py  llm.py  log_config.py  onenote.py  onenote_client.py  pyproject.toml  requirements.txt  speech_listener.py  summarizer.py  transcriber.py  utils.py
.github/workflows/: ci.yml
app/: audio_capturer.py  llm.py  onenote_client.py  transcriber.py
applescript/: You Talk Too Much.scpt
applescript/You Talk Too Much.app/Contents/: Info.plist
applescript/You Talk Too Much.app/Contents/Resources/: applet.rsrc
applescript/You Talk Too Much.app/Contents/Resources/Scripts/: main.scpt
applescript/You Talk Too Much.app/Contents/Resources/description.rtfd/: TXT.rtf
src/you_talk_too_much/: app.py  audio_capturer.py  config.py  llm.py  log_config.py  main.py  onenote_client.py  transcriber.py  utils.py
src/you_talk_too_much/audio/: capturer.py
src/you_talk_too_much/cli/: logger.py
src/you_talk_too_much/integrations/: onenote.py
src/you_talk_too_much/llm/: summarizer.py
src/you_talk_too_much/storage/: file_manager.py
src/you_talk_too_much/transcription/: transcriber.py
tests/: test_placeholder.py
tests/you_talk_too_much/: test_file_manager.py  test_smoke.py
tests/you_talk_too_much/audio/: test_capturer.py
tests/you_talk_too_much/llm/: test_summarizer.py
