[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "you-talk-too-much-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-aiplatform>=1.141.0",
    "markdown>=3.10.2",
    "msal>=1.35.1",
    "msal-extensions>=1.3.1",
    "numpy>=2.4.3",
    "openai-whisper>=20250625",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[project.scripts]
you-talk-too-much = "you_talk_too_much.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/you_talk_too_much"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
