[project]
name = "you-talk-too-much-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Mike Lim" }]
dependencies = [
    "google-genai>=0.1.0",
    "markdown>=3.10.2",
    "msal>=1.35.1",
    "msal-extensions>=1.3.1",
    "mlx-whisper>=0.4.3",
    "numpy<1.27.0",
    "pyannote-audio==3.3.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "typer>=0.15.0",
    "huggingface-hub<0.25.0",
    "silero-vad>=6.2.1",
]

[project.scripts]
you-talk-too-much = "you_talk_too_much.main:run"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/you_talk_too_much"]

# --- Linting & Formatting (Ruff) ---
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
# Stable rule selection for production environments
select = [
    "E", "W",  # pycodestyle
    "F",       # Pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "ARG",     # flake8-unused-arguments
    "SIM",     # flake8-simplify
    "RUF",     # Ruff-specific rules
    "N",       # pep8-naming
    "ANN",     # flake8-annotations
    "T20",     # flake8-print
    "TC",      # flake8-type-checking
    "ASYNC",   # flake8-async
    "PL",      # Pylint
    "TID",     # flake8-tidy-imports
    "FA",      # flake8-future-annotations
]
ignore = [
    "ANN204", # Missing return type for special methods (e.g. __init__)
    "ANN401", # Dynamically typed expressions (Any) are allowed
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 20
max-returns = 12

[tool.ruff.lint.per-file-ignores]
# Relax strictness for tests
"tests/*" = [
    "ANN",      # No need for full type annotations in tests
    "S101",     # Allow use of assert
    "D103",     # No need for docstrings in every test function
    "PLR2004",  # Allow "magic values" in test comparisons
]

[tool.ruff.lint.isort]
known-first-party = ["you_talk_too_much"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# --- Type Checking (Ty) ---
[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-reference = "error"
unresolved-import = "error"
invalid-argument-type = "error"
call-non-callable = "error"
unused-ignore-comment = "warn"

[[tool.ty.overrides]]
include = ["tests/**/*.py"]
[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"
missing-argument = "warn"

# --- Coverage Configuration ---
[tool.coverage.run]
data_file = ".coverage_reports/.coverage"
source = ["src/you_talk_too_much"]

[tool.coverage.xml]
output = ".coverage_reports/coverage.xml"

[tool.coverage.report]
show_missing = true
skip_covered = true

# --- Testing (Pytest) ---
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = """
    --strict-markers
    --tb=short
    --cov=src/you_talk_too_much
    --cov-report=term-missing
    --cov-report=xml
    --basetemp=.pytest_tmp
"""
