[project]
name = "you-talk-too-much-app"
version = "0.1.0"
description = "Coworkers can't stop talking? There's an app for it."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Mike Lim" }]
dependencies = [
    "google-genai>=1.67.0",
    "markdown>=3.10.2",
    "msal>=1.35.1",
    "mlx-whisper>=0.4.3",
    "numpy>=2.4.3",
    "pyannote-audio>=4.0.4",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "silero-vad>=6.2.1",
    "omegaconf>=2.3.0",
]

[project.scripts]
you-talk-too-much = "you_talk_too_much.main:run"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/you_talk_too_much"]

# --- Linting & Formatting (Ruff) ---
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
# Stable rule selection for production environments
select = [
    "E", "W",  # pycodestyle
    "F",       # Pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "ARG",     # flake8-unused-arguments
    "SIM",     # flake8-simplify
    "RUF",     # Ruff-specific rules
    "S",       # flake8-bandit (security)
    "N",       # pep8-naming
    "ANN",     # flake8-annotations
    "T20",     # flake8-print
    "TC",      # flake8-type-checking
    "ASYNC",   # flake8-async
    "PL",      # Pylint
    "TID",     # flake8-tidy-imports
    "FA",      # flake8-future-annotations
    "PT",      # flake8-pytest-style
    "RET",     # flake8-return
    "SLF",     # flake8-self
    "PTH",     # flake8-use-pathlib
]
ignore = [
    "ANN204", # Missing return type for special methods (e.g. __init__)
    "ANN401", # Dynamically typed expressions (Any) are allowed
    "S101",   # Use of assert is allowed as per project standard
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 20
max-returns = 12

[tool.ruff.lint.per-file-ignores]
# Relax strictness for tests
"tests/*" = [
    "ANN",      # No need for full type annotations in tests
    "S101",     # Allow use of assert
    "D103",     # No need for docstrings in every test function
    "PLR2004",  # Allow "magic values" in test comparisons
    "SLF001",   # Allow accessing private members in tests
    "PT019",    # Allow mock fixtures as parameters (patch decorator pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["you_talk_too_much"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

# --- Type Checking (Ty) ---
[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-reference = "error"
unresolved-import = "error"
invalid-argument-type = "error"
call-non-callable = "error"
unused-ignore-comment = "warn"

[[tool.ty.overrides]]
include = ["tests/**/*.py"]
[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"
missing-argument = "warn"

# --- Coverage Configuration ---
[tool.coverage.run]
data_file = ".coverage_reports/.coverage"
source = ["src/you_talk_too_much"]

[tool.coverage.xml]
output = ".coverage_reports/coverage.xml"

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

# --- Testing (Pytest) ---
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "manual: marks tests that require manual execution and external dependencies"
]
addopts = """
    --strict-markers
    --tb=short
    --cov=src/you_talk_too_much
    --cov-report=term-missing
    --cov-report=xml
    --basetemp=.pytest_tmp
    -m "not manual"
"""
